# robotcraft2017_patrol

./: CMakeLists.txt  README.md  package.xml
arena/: patrol_maze.world  patrol_maze.yaml  robot.inc
config_files/: call_clear_costmap_service.cpp  cccs_plugin.xml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_and_local_planner_params.yaml  robotcraft2017_patrol_rviz_config.rviz
include/robotcraft2017_patrol/: call_clear_costmap_service.h  graph.h
launch/: robotcraft2017.launch  start_robots.launch
launch_robotcraft/: ROBOTCRAFT_COMMANDS.txt  costmap_common_params.yaml  local_costmap_params.yaml  multimaster.launch  multimaster_config.yaml  navigation_robotcraft.launch  robot_0_initial_pose.xml  robot_1_initial_pose.xml  robot_2_initial_pose.xml  robotcraft.rviz  start_robot_0.launch  start_robot_1.launch  start_robot_2.launch  stopy_drivers_robotcraft.launch
src/: graph.cpp  patrolbot.cpp
urdf/: stopy.urdf
